--- a/src/components/code/CopyCodeButton.css
+++ b/src/components/code/CopyCodeButton.css
@@ -1,6 +1,6 @@
 .codeWrapper {
   position: relative;
-  max-width: 98vw;
+  max-width: 98%;
   margin-left: auto;
   margin-right: auto;
 }
