--- a/src/components/layout/Layout.css
+++ b/src/components/layout/Layout.css
@@ -59,12 +59,6 @@ h6 {
   cursor: not-allowed;
 }
 
-
-code {
-  font-family: 'Ubuntu Mono', monospace;
-  font-size: 12px;
-}
-
 .grvsc-code {
   padding-top: 25px;
 }
