--- a/src/templates/post.css
+++ b/src/templates/post.css
@@ -24,7 +24,7 @@
 
 .embedVideo-container {
   display: block;
-  max-width: 98vw;
+  max-width: 98%;
   width: 700px;
 }
 
